[package]
name = "aproxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
config = { version = "0.13.3", features = ["json"]}
serde = { version = "1", features = ["derive"]}
serde_json = "1"
tokio = { version = "1", features = ["full"] }
